remove footer for now

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <canvas></canvas>
 
-<footer>
+<!--<footer>
   <a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>
-</footer>
+</footer>-->
 
 <script>
 (function() {
