Match blue background to image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>I'm your Lighthouse</title>
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#000">
+  <meta name="theme-color" content="#304ffe">
   <link rel="icon" sizes="192x192" href="logo.png">
   <style>
     html,body {
@@ -16,7 +16,7 @@
       -webkit-font-smoothing: antialiased;
     }
     :focus {
-      outline-color: #242ffd;
+      outline-color: #304ffe;
     }
     body {
       display: flex;
@@ -26,7 +26,7 @@
       /*will-change: background-color;*/
     }
     body.playing {
-      background-color: #000;
+      background-color: #304ffe;
     }
     body.playing footer {
       visibility: hidden;
