--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
       for (let i = 0; i < bufferLength; ++i) {
         let barHeight = dataArray[i] / 2;
-        this.canvasCtx.fillStyle = 'rgb(54,113,254)';
+        this.canvasCtx.fillStyle = '#448aff';
         this.canvasCtx.fillRect(x, this.HEIGHT - barHeight, barWidth, barHeight);
         x += barWidth + 1;
       }
