--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       right: 0;
       display: flex;
       justify-content: center;
+      color: #ccc;
     }
     a {
       color: #212121;
@@ -72,9 +73,10 @@
 
 <canvas></canvas>
 
-<!--<footer>
-  <a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>
-</footer>-->
+<footer>
+  <!--<a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>-->
+  <span>v1.1.2</span>
+</footer>
 
 <script>
 (function() {
