Turn off runtime caching

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   init();
 
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('sw.js', {scope: '/'})
+    navigator.serviceWorker.register('sw.js', {scope: './'})
       .then(registration => {
         console.log('Service Worker Registered');
       });
