--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
 <footer>
   <!--<a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>-->
-  <span>v1.1.2</span>
+  <!-- TODO: automating incrementing this version with the cache versions in sw.js -->
+  <span>v0.0.1</span>
 </footer>
 
 <script>
