--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       height: 200px;
       width: auto;
       cursor: pointer;
+      border-radius: 80px;
     }
     footer {
       position: absolute;
