--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 <footer>
   <!--<a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>-->
-  <!-- TODO: automating incrementing this version with the cache versions in sw.js -->
-  <span>v0.0.2</span>
+  <!-- TODO: automate incrementing this version with the cache versions in sw.js -->
+  <span>v0.0.4</span>
 </footer>
 
 <script>
