--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       animation: rotate 5s infinite;
       transform-origin: left;
       left: 142px;
+      animation-direction: reverse;
     }
 
     .light {
