--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#304ffe">
   <link rel="icon" sizes="192x192" href="logo.png">
   <style>
+    * {
+      box-sizing: border-box;
+    }
     html,body {
       height: 100vh;
       overflow: hidden;
@@ -24,6 +27,7 @@
       justify-content: center;
       transition: background-color 300ms ease-in-out;
       /*will-change: background-color;*/
+      background-color: #fff;
     }
     body.playing {
       background-color: #304ffe;
@@ -64,6 +68,59 @@
       height: 100vh;
       z-index: -1;
       /*background-color: #242ffd;*/
+    }
+
+    #toast {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 16px;
+      width: 100%;
+      box-sizing: border-box;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 500;
+      display: flex;
+      justify-content: space-between;
+      transition: transform 300ms cubic-bezier(0, 0, 0.3, 1);
+      transform: translate3d(0, 100%, 0);
+      /*opacity: 0;*/
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 1000;
+      /*visibility: hidden;*/
+      will-change: transform;
+    }
+
+    @media (min-width: 601px) {
+      #toast {
+        left: 16px;
+        border-radius: 2px;
+        width: auto;
+        right: initial;
+      }
+      #toast.show {
+        bottom: 16px;
+      }
+    }
+
+    #toast.show {
+      /*opacity: 1;*/
+      transform: none;
+      /*visibility: visible;*/
+    }
+
+    #toast .toast-msg {
+      color: #fff;
+    }
+    #toast .toast-handler {
+      color: #FFC107;
+      font-weight: 600;
+      text-transform: uppercase;
+    }
+    #toast .toast-handler:not(:empty) {
+      margin-left: 16px;
     }
 
     /* thanks https://codepen.io/BradleyPJ/pen/pbGPZV */
@@ -129,6 +186,10 @@
   <span>v0.0.6</span>
 </footer>
 
+<div id="toast">
+  <span class="toast-msg"></span><span class="toast-handler"></span>
+</div>
+
 <script>
 (function() {
   'use strict';
@@ -139,21 +200,86 @@
     }
 
     loadSound(url=this.url) {
-      return fetch(url).then(resp => resp.arrayBuffer());
+      return new Promise((resolve, reject) => {
+        const xhr = new XMLHttpRequest();
+        xhr.responseType = 'arraybuffer';
+        xhr.open('GET', url);
+        xhr.onload = e => {
+          resolve(e.target.response);
+        };
+        xhr.onerror = reject;
+        xhr.send();
+      });
+    }
+  }
+
+  class Toast {
+    constructor(selector) {
+      const container = document.querySelector(selector);
+      if (!container) {
+        container = document.createElement('div');
+        container.id = 'toast';
+        document.body.appendChild(container);
+      }
+
+      const refreshPage = e => {
+        e.stopPropagation();
+        location.reload();
+      };
+
+      container.addEventListener('touchstart', refreshPage);
+      container.addEventListener('mousedown', refreshPage);
+
+      this._el = container;
+      this._msg = container.querySelector('.toast-msg');
+      this._handler = container.querySelector('.toast-handler');
+    }
+
+    show(msg, handlerMsg = null, timeout = 7000) {
+      clearTimeout(this._timeoutId);
+
+      this._msg.textContent = msg;
+      this._handler.textContent = handlerMsg;
+      this._el.classList.add('show');
+
+      // Wait a few seconds, then fade it...
+      this._timeoutId = setTimeout(() => {
+        this._el.classList.remove('show');
+      }, timeout);
+
+      // // After which, remove it altogether.
+      // this._el.addEventListener('transitionend', e => {
+      //   e.target.parentNode.removeChild(evt.target);
+      // });
     }
   }
 
   class SoundFile {
     constructor(url=null) {
-      this.audioCtx = new AudioContext();
+      if (!!window.AudioContext) {
+        this.audioCtx = new AudioContext();
+      } else {
+        this.audioCtx = new webkitAudioContext();
+
+        // Help Safari 10.0.1. it doesn't support the promise-based decodeAudioData.
+        const decodeAudioData = webkitAudioContext.prototype.decodeAudioData;
+        webkitAudioContext.prototype.decodeAudioData = function(audioData) {
+          return new Promise((resolve, reject) => {
+            return decodeAudioData.call(this, audioData, resolve, reject);
+          });
+        };
+      }
+
       this.loader = new Loader(url);
       this.buffer = null;
     }
 
-    load(url) {
+    load(url = null) {
       if (this.buffer) {
         return Promise.resolve(this.buffer);
       }
+
+      url = this.loader.url || url;
 
       return this.loader.loadSound(url)
         .then(ab => this.audioCtx.decodeAudioData(ab))
@@ -165,16 +291,16 @@
 
     play() {
       this.source = this.audioCtx.createBufferSource();
+      this.source.buffer = this.buffer;
 
       this.analyser = this.audioCtx.createAnalyser();
       this.analyser.fftSize = 2048;
 
+      // Connect the dots.
       this.source.connect(this.analyser);
       this.analyser.connect(this.audioCtx.destination);
 
-      this.source.buffer = this.buffer;
-
-      this.source.start();
+      this.source.start(0);
       this.source.loop = true;
     }
 
@@ -182,6 +308,7 @@
       if (!this.source) {
         return;
       }
+
       this.source.loop = false;
       this.source.stop();
     }
@@ -281,7 +408,6 @@
       return;
     }
 
-    sound.stop();
     sound.load().then(buffer => {
       document.body.classList.add('playing');
       sound.play();
@@ -299,7 +425,6 @@
   }
 
   function init() {
-    //const logo = document.querySelector('.logo img');
     document.addEventListener('mousedown', play);
     document.addEventListener('touchstart', play);
     document.addEventListener('keydown', function(e) {
@@ -311,25 +436,52 @@
     document.addEventListener('mouseup', stop);
     document.addEventListener('touchend', stop);
 
+    if ('serviceWorker' in navigator) {
+      const toast = new Toast('#toast');
+
+      navigator.serviceWorker.register('sw.js', {scope: './'}).then(reg => {
+        console.info('Service Worker Registered');
+
+        reg.onupdatefound = function() {
+          reg.installing.onstatechange = function(e) {
+            if (e.target.state === 'installed') {
+              if (!navigator.serviceWorker.controller) {
+                toast.show('Site cached and ready to work offline!');
+              } else {
+                toast.show('A new version is available.', 'Refresh');
+              }
+            }
+          };
+        };
+
+      }).catch(e => {
+        console.error('Error during service worker registration:', e);
+      });
+
+      // navigator.serviceWorker.ready.then(reg => {
+      //   console.log(reg);
+      //   console.info('Service Worker Ready');
+      // });
+
+      // // If a SW is registered, load sound immediately because the audio
+      // // file has been precached.
+      // if (navigator.serviceWorker.controller) {
+      //   sound.load();
+      // }
+    }
+
     sound.load();
   }
 
   init();
 
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('sw.js', {scope: './'})
-      .then(registration => {
-        console.log('Service Worker Registered');
-      });
-    navigator.serviceWorker.ready.then(registration => {
-      console.log('Service Worker Ready');
-    });
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    // // SW is already registered, load sound immediately.
-    // if (navigator.serviceWorker.controller) {
-    //   sound.load();
-    // }
-  }
+  ga('create', 'UA-88397062-1', 'auto');
+  ga('send', 'pageview');
 })();
 </script>
 </body>
