--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
       font: 12px "Roboto", sans-serif;
       -webkit-font-smoothing: antialiased;
     }
-    :focus {
-      outline-color: #304ffe;
-    }
     body {
       display: flex;
       align-items: center;
@@ -177,7 +174,7 @@
 </head>
 <body>
 
-<div class="logo" tabindex="0">
+<div class="logo">
   <img src="pwa-lighthouse.png" alt="LH logo">
   <div id="lightWrapper">
     <div class="light"></div>
@@ -433,13 +430,29 @@
     document.addEventListener('mousedown', play);
     document.addEventListener('touchstart', play);
     document.addEventListener('keydown', function(e) {
-      if (e.keyCode === 13) {
-        play(e);
+      switch (e.keyCode) {
+        case 13: // enter
+        case 32: // space
+          if (document.body.classList.contains('playing')) {
+            stop(e);
+          } else {
+            play(e);
+          }
+          break;
+        case 27:
+          stop(e);
+          break;
       }
     });
 
     document.addEventListener('mouseup', stop);
     document.addEventListener('touchend', stop);
+
+    document.addEventListener('visibilitychange', function(e) {
+      if (document.hidden) {
+        stop(e);
+      }
+    });
 
     if ('serviceWorker' in navigator) {
       const toast = new Toast('#toast');
