--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       align-items: center;
       justify-content: center;
       transition: background-color 300ms ease-in-out;
-      /*will-change: background-color;*/
       background-color: #fff;
     }
     body.playing {
@@ -61,12 +60,10 @@
     }
     canvas {
       position: absolute;
-      top: 0;
+      top: 55px;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-      /*background-color: #242ffd;*/
+      /*width: 100vw;*/
+      /*height: 100vh;*/
     }
 
     #toast {
@@ -84,11 +81,8 @@
       justify-content: space-between;
       transition: transform 300ms cubic-bezier(0, 0, 0.3, 1);
       transform: translate3d(0, 100%, 0);
-      /*opacity: 0;*/
       box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
       background: rgba(0, 0, 0, 0.7);
-      z-index: 1000;
-      /*visibility: hidden;*/
       will-change: transform;
     }
 
@@ -105,9 +99,7 @@
     }
 
     #toast.show {
-      /*opacity: 1;*/
       transform: none;
-      /*visibility: visible;*/
     }
 
     #toast .toast-msg {
@@ -172,6 +164,129 @@
         opacity: 0;
       }
     }
+
+    .loop_choices {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      width: 70%;
+      margin-top: 16px;
+      transition: opacity 300ms ease-in-out;
+      will-change: opacity;
+    }
+
+    .loop_choice {
+      font-weight: 500;
+      font-size: 16px;
+      padding: 8px;
+      border-radius: 3px;
+      border: 3px solid #304ffe;
+      color: rgb(50,109,254);
+      background-color: #fff;
+      white-space: nowrap;
+    }
+    .loop_choice.selected {
+      background-color: rgb(50,109,254);
+      border-color: #304ffe;
+      color: #fff;
+    }
+
+    .playing .loop_choices {
+      opacity: 0;
+    }
+
+    /*.playing .loop_choice.selected {
+      border-color: rgba(255,255,255,0.3);
+    }*/
+
+    @keyframes movewave {
+      0% {
+        transform: translate3d(0,0,0);
+      }
+      100% {
+        transform: translate3d(88px,0,0);
+      }
+    }
+
+    .wave {
+      --wave-spacer: 18px;
+
+      background: url("waves.png") repeat-x 50% 50%;
+      background-size: contain;
+      position: absolute;
+      width: 150vw;
+      height: 32px;
+      top: calc(50% + 40px);
+      filter: none;
+      animation-name: movewave;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate-reverse;
+      animation-timing-function: ease-in-out;
+      animation-play-state: paused;
+      transition: filter 300ms ease-in-out;
+    }
+
+    .wave1 {
+      animation-name: none;
+      margin-left: 43px;
+    }
+
+    .wave2 {
+      top: calc(50% + 40px + var(--wave-spacer));
+      animation-duration: 5s;
+      margin-left: -38px;
+    }
+
+    .wave3 {
+      top: calc(50% + 40px + calc(var(--wave-spacer) * 2));
+      animation-duration: 4.5s;
+      margin-left: -38px;
+    }
+
+    .wave4 {
+      top: calc(50% + 40px + calc(var(--wave-spacer) * 3));
+      animation-duration: 4s;
+      margin-left: -38px;
+    }
+
+    .wave5 {
+      top: calc(50% + 40px + calc(var(--wave-spacer) * 4));
+      animation-duration: 3.5s;
+      margin-left: -38px;
+    }
+
+    .waves_bg {
+      background-color: #fff;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: calc(50% - 140px);
+      background: linear-gradient(to bottom, white, white 5%, transparent 20%);
+    }
+
+    .playing .wave {
+      animation-play-state: running;
+      filter: drop-shadow(2px -1px 2px rgb(50,109,254));
+    }
+
+    /* z-index */
+    canvas {
+      z-index: -1;
+    }
+    .waves_bg {
+      z-index: 1;
+    }
+    .loop_choices {
+      z-index: 3;
+    }
+    #lightWrapper {
+      z-index: 4;
+    }
+    #toast {
+      z-index: 5;
+    }
   </style>
 </head>
 <body>
@@ -181,14 +296,25 @@
   <div id="lightWrapper">
     <div class="light"></div>
   </div>
+  <div class="loop_choices">
+    <a href="looped.mp3" class="loop_choice">Loop 1</a>
+    <a href="longer2.mp3" class="loop_choice">Loop 2</a>
+    <a href="loop2.mp3" class="loop_choice">Loop 3</a>
+  </div>
 </div>
+<div class="wave wave1"></div>
+<div class="wave wave2"></div>
+<div class="wave wave3"></div>
+<div class="wave wave4"></div>
+<div class="wave wave5"></div>
+<div class="waves_bg"></div>
 
 <canvas></canvas>
 
 <footer>
   <!--<a href="https://www.youtube.com/watch?v=bx9JXImZRI0" rel="noopener" target="_blank">inspiration</a>-->
   <!-- TODO: automate incrementing this version with the cache versions in sw.js -->
-  <span>v0.0.8</span>
+  <span>v0.0.9</span>
 </footer>
 
 <div id="toast">
@@ -198,6 +324,8 @@
 <script>
 (function() {
   'use strict';
+
+  const DEFAULT_LOOP_SELECTION = 'looped.mp3';
 
   class Loader {
     constructor(url=null) {
@@ -272,6 +400,18 @@
 
       this.loader = new Loader(url);
       this.buffer = null;
+
+      this.updateSelectedLoop(url);
+    }
+
+    updateSelectedLoop(url) {
+      const loops = document.querySelectorAll('.loop_choice');
+      loops.forEach(loop => {
+        loop.classList.remove('selected');
+        if (loop.getAttribute('href') === url) {
+          loop.classList.add('selected');
+        }
+      });
     }
 
     load(url = null) {
@@ -323,7 +463,7 @@
       this.fft = fft;
 
       this.WIDTH = document.documentElement.clientWidth;
-      this.HEIGHT = document.documentElement.clientHeight;
+      this.HEIGHT = document.documentElement.clientHeight / 2;
       canvas.width = this.WIDTH;
       canvas.height = this.HEIGHT;
       // canvas.width = this.WIDTH * devicePixelRatio;
@@ -396,8 +536,7 @@
     }
   }
 
-  // const sound = new SoundFile('longer2.mp3');
-  const sound = new SoundFile('looped.mp3');
+  let sound = new SoundFile(DEFAULT_LOOP_SELECTION);
   const visualizer = new Visualizer(sound, document.querySelector('canvas'));
   const ligthtWrapper = document.querySelector('#lightWrapper');
 
@@ -428,6 +567,14 @@
     });
   }
 
+  function setLoopChoice(e) {
+    const src = e.target.getAttribute('href');
+    if (src && src !== sound.loader.url) {
+      sound = new SoundFile(src);
+      visualizer.sound = sound;
+    }
+  }
+
   function init() {
     document.addEventListener('mousedown', play);
     // touch-action: none added to body to document-level passive
@@ -452,6 +599,15 @@
 
     document.addEventListener('mouseup', stop);
     document.addEventListener('touchend', stop);
+
+    const picker = document.querySelector('.loop_choices');
+    picker.addEventListener('mousedown', setLoopChoice);
+    picker.addEventListener('touchstart', setLoopChoice);
+    // Prevent anchor redirects.
+    picker.addEventListener('click', function(e) {
+      e.preventDefault();
+      e.stopPropagation();
+    });
 
     document.addEventListener('visibilitychange', function(e) {
       if (document.hidden) {
