--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#304ffe">
   <link rel="icon" sizes="192x192" href="logo.png">
+  <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
+    integrity="sha384-uONtBTCBzHKF84F6XvyC8S0gL8HTkAPeCyBNvfLfsqHh+Kd6s/kaS4BdmNQ5ktp1"
+    crossorigin="anonymous"></script>
   <style>
     * {
       box-sizing: border-box;
